<resources>
    <string name="app_name">CardGame</string>
    <string name="menu_start_game">Start Game</string>
    <string name="menu_rules">Rules</string>
    <string name="flipped_card_description">Flipped card</string>
    <string name="player_card_description">Player\'s card</string>
    <string name="player_score">Player: 0</string>
    <string name="flip_card_btn">Flip Card</string>
    <string name="draw_card_btn">Draw Card</string>
    <string name="opponent_score">Opponent: 0</string>
    <string name="opponents_card_description">Opponents card</string>
    <string name="title_main">Welcome to my card game</string>
    <string name="main_image_description">Image of cards</string>
    <string name="back_btn">Back</string>
    <string name="rules_text">
    1. Press "Draw Card" to draw two cards one for the player and one for the opponent.\n \n
    2. Then press "Flip Card" to flip the deck card.\n \n
    3. The cards are then calculated which one is closest to the flip card. \n \n
    4. The winner then gets 1 point or if its a tie no points.
    5. The game goes on until no cards are left in the deck.
</string>
    <string name="menu_stats">Stats</string>
</resources>